# Twinverse

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Create-new-profile.sh  Linux-Co-Op_w-gamescope.sh  Linux-coop.sh  Makefile  README.es.md  README.fr.md  README.md  README.pt.md  README_EN.md  RESTART_GUI_CLEAN.sh  build.sh  clean.sh  conftest.py  inputplumber  inputplumber.c  io.github.mall0r.Twinverse.yaml  io.github.mallor.MultiScope.metainfo.xml  io.github.mallor.MultiScope.yaml  io.github.mallor.Twinverse.yaml  linuxcoop.py  package-appimage.sh  protoncoop.py  pyproject.toml  requirements.txt  run.sh  run_linux_coop.sh  setup.py  staged_changes.txt  test_click.py  test_gamescope_save.sh  twinverse.py
.github/workflows/: ci.yml  ci_cd.yml  flathub.yml  release.yml
build_scripts/: build_with_pyinstaller.py
controller_config/: Player1_Controller  Player1_Controller_Blacklist  Player2_Controller  Player2_Controller_Blacklist
docs/: GUIDE.es.md  GUIDE.md  GUIDE.pt-br.md  README.es.md  README.fr.md  README.pt-br.md
flatpak/: python-modules.json
profiles/: JogoLinux.profile  MeuJogo.profile  Palworld  Palworld.json  Palworld.profile  Profile.json  example.json
res/: multiscope.desktop  resources.xml
scripts/: build.sh  clean.sh  create_release.sh  kwin_gamescope_horizontal.js  kwin_gamescope_vertical.js  package-appimage.sh  package-flatpak.sh  version_manager.py
share/applications/: io.github.mallor.Twinverse.desktop
src/: __init__.py  intercept_cwd.c  main.py
src/cli/: commands.py
tests/: test_basic.py  test_gui.py
(+41 files in other folders)
